<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            android:contentDescription = "@string/txtContentDescription" />

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgView_logo"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/txtLogin"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <!--            Fields-->
            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_login"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <!--                Field 1: Account Code-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/txtAccCode"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:labelFor="@+id/etAccCode"
                        />

                    <EditText
                        android:id="@+id/etAccCode"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:inputType="number"
                        android:autofillHints="@string/txtAccCode" />

                </LinearLayout>

                <!--                Field 2: Username-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/txtUsername"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:labelFor="@+id/etUsername"
                        />

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:inputType="date"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:importantForAutofill="no"/>

                </LinearLayout>

                <!--                Field 2: Password-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/txtPassword"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:labelFor="@+id/etPassword"
                        />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:inputType="textPassword"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:importantForAutofill="no"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/linlay1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/txtLogin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:onClick="login"
                />

        </RelativeLayout>

    </RelativeLayout>

    <!--    <RelativeLayout-->
    <!--        android:id="@+id/rellay2"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:layout_marginLeft="20dp"-->
    <!--        android:layout_marginRight="20dp"-->
    <!--        android:visibility="gone">-->

    <!--        <Button-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_alignParentRight="true"-->
    <!--            android:background="@color/transparent"-->
    <!--            android:fontFamily="sans-serif"-->
    <!--            android:text="Forgot Password?"-->
    <!--            android:textAllCaps="true"-->
    <!--            android:textColor="@color/white" />-->

    <!--    </RelativeLayout>-->


</RelativeLayout>